[GEOS-10809] Keycloak : add support for usernames with spaces : avoid try catch