@@ -1,8 +1,7 @@
 package org.geoserver.security.keycloak;
 
-import java.io.UncheckedIOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 /** A builder for a keycloak rest endpoint. */
 class KeycloakUrlBuilder {
@@ -42,11 +41,8 @@ class KeycloakUrlBuilder {
      */
     KeycloakUrlBuilder userByName(String userName) {
         users();
-        try {
-            sb.append("?exact=true&username=").append(URLEncoder.encode(userName, "UTF-8"));
-        } catch (UnsupportedEncodingException e) {
-            throw new UncheckedIOException(e);
-        }
+        sb.append("?exact=true&username=")
+                .append(URLEncoder.encode(userName, StandardCharsets.UTF_8));
         return this;
     }
 
